Fix loading on iOS

--- a/river.css
+++ b/river.css
@@ -27,6 +27,7 @@
 }
 
 .control {
+	background: white;
 	bottom: 0;
 	box-shadow: 0 0 10px #ccc;
 	position: fixed;
